assets/IMAGES/Document_files/style.css
/* import  */

/* font declaration ...........................*/

@font-face {
    font-family: porsche;
    src: url('./assets/fonts/Porsche-font.ttf');
}
@font-face {
    font-family: OpenSansItalic;
    src: url('./assets/fonts/open-sans-italic/OpenSans-Italic.ttf');
}
@font-face {
    font-family: Oleto;
    src: url('./assets/fonts/Oleto\ DEMO.ttf');
}
@font-face {
    font-family: OpenSans;
    src: url('./assets/fonts/open-sans-italic/OpenSans-Regular.ttf');
}


/* basic structure............................... */
*{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
    overflow-y: hidden;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

:root{
    /* color......... */
    --lightColor: rgb(218, 218, 218);
    --lightColorHover:rgb(153, 153, 153);
    --darkColor:rgb(15, 15, 15);
    --hoverColor:rgb(48, 48, 48);
    --gray-color:#a3a3a3;
    --yellow-color:#CB9D58;

    /* --fontColor: ; */
    --gradient-color-top:white;
    --gradient-color-bottom:black;


    /* fonts.......... */
    --logo-font : porsche;
    --italic-font: OpenSansItalic;
    --inter: inter;
    --hollow-font:Oleto;
    --base-font: OpenSans;

}
html,body{
    overflow-x: hidden;
    overflow-y: auto;
}

body::-webkit-scrollbar{
    display: none;
}
/* global structure ............................... */
canvas{
    display: none;
}

.pages{
    height: 100vh;
    width: 100vw;
    background-color: var(--darkColor);
    position: relative;
}
.logo img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.gradient-text{
    background-image: linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    background-clip: text;
    color: transparent;

    /* for safari */
    background: -webkit-linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.gradient-text-70p{
    background-image: linear-gradient(var(--gradient-color-top) 70%,var(--gradient-color-bottom));
    background-clip: text;
    color: transparent;

    /* for safari */
    background: -webkit-linear-gradient(var(--gradient-color-top) 70%,var(--gradient-color-bottom));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.gradient-text-reverse{
    background-image: linear-gradient(var(--gradient-color-bottom),var(--gradient-color-top));
    background-clip: text;
    color: transparent;

    /* for safari */
    background: -webkit-linear-gradient(var(--gradient-color-bottom),var(--gradient-color-top));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* header section.................................... */
nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* background-color: red; */
   
    padding: 15px 80px;
    height: auto;
    width: 100%;
    

    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;

    backdrop-filter: blur(5px);
    background-image: linear-gradient(-235deg,rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.281));
    /* background-image: radial-gradient(rgba(255, 255, 255, 0) 10%,rgba(0, 0, 0, 0.281)); */
    background-size: 20px 20px;
}
nav .logo{
    /* width: 85px; */
    height: 25px;
    
}

/* logo img in global section */

nav .hamburger{
    width: auto;
    height: 30px;
    padding: 5px;
    
    border-radius: 50%;
    cursor: pointer;
}
nav .hamburger:hover{
    background-color: var(--hoverColor);
}
.hamburger svg{
    width: 100%;
    height: 100%;
    fill: var(--lightColor);
}

/* fixed watermark in lower right.................. */
.watermark{
    width: max-content;

    position: fixed;
    bottom: 5%;
    right: 5%;
    z-index: 99;
    
}
.watermark .wrapper{
    width: auto;
    height: auto;

    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
}
.watermark .wrapper .logo{
    width: 20px;
}
.watermark .wrapper .name h3{
    font-family: var(--logo-font);
    color: var(--lightColor);
    font-weight: 100;
    letter-spacing: 1px;
}

/* page coustomization........................... */

/* page 1.........................................*/

.page-1{
    position: relative;
    color: var(--lightColor);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.page-1 .main-heading{
    position: absolute;
    top: 15%;
    
    
}
.page-1 .main-heading h1{
    font-family: var(--logo-font);
    font-weight: 100;
    font-size: 10vw;

    background-image: linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    background-clip: text;
    color: transparent;

    /* for safari */
    background: -webkit-linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.page-1 .sub-heading {
    position: absolute;
    bottom: 10%;

    font-size: 50px;
    
    font-family:var(--italic-font);
    font-weight: 100;

    background-image: linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    background-clip: text;
    color: transparent;

    /* for safari */
    background: -webkit-linear-gradient(var(--gradient-color-top),var(--gradient-color-bottom));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* page 2.........................................*/

.page-2{
    position: relative;
}


.trans-text{
    position: absolute;
    bottom: 10vh;
    left: 2.6vw;
}

.page-2 .trans-text .text11{
    font-family: var(--hollow-font);
    writing-mode: vertical-rl;
    text-orientation: mixed;
    font-size: 9.3rem;
    color: var(--lightColor);
    transform: rotate(180deg);
    letter-spacing: 17px;
   
}

.page2-discription-part{
    font-family: var(--base-font);
    display: flex;
    flex-direction: column;
    gap: 8px;
    position: absolute;
    right: 34px;
    bottom: 96px;
    color: var(--lightColor);
    
    max-width: 27vw;
}

.page2-discription-part .headline{
    font-family: var(--base-font);
    font-weight: 700;
    font-size: 1.2rem;
}
.page2-discription-part .discrip{
    font-family:var(--italic-font);
    font-weight: 400;
    color: var( --gray-color);
}


/* page 3.................................... */

.page-3{
    background-image: url('assets/tmp/upper car.png');
    background-size: cover;
    background-position: center;
    color: var(--lightColor);
}
.page-3 .top-left{
    position: absolute;
    top: 20%;
    left: 10%;
}
.page-3  h3{
    font-size: 7vw;
    font-family: var(--logo-font);
    font-weight: 100;
    margin-bottom: 10px;
}
@media only screen and (min-width: 960px){
    .page-3 .top-left h3{
        font-size: 60px;
    }
}
.page-3 .top-left p{
    max-width: 30%;
    font-family: var(--base-font);
    font-size: 1.2rem;
    color: var(--gray-color);
}
.page-3 .bottom-right{
    position: absolute;
    bottom: 15%;
    right: 10%;
    width: 25vw;
    max-width: 300px;

}
.page-3 .bottom-right .wrapper{
    display: flex;
    flex-direction: column;
    width: 100%;
    
    
}
.page-3 .bottom-right h3{
    font-size: 5vw;
    
}
@media only screen and (min-width: 960px){
    .page-3 .bottom-right h3{
        font-size: 60px;
    }
}
.page-3  .end{
    margin-left: auto;
}


/* page 4.........................................*/

/* .blurred{
    filter: blur(5px);
    transition: all 0.25s ease-in-out;
} */
.page-4 {
   position: relative;
   backdrop-filter: blur(5px);
   background-image: linear-gradient(-235deg,rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.281));
   /* background-image: radial-gradient(rgba(255, 255, 255, 0) 10%,rgba(0, 0, 0, 0.281)); */
   background-size: 20px 20px;
}


.cards-wrapper{
    overflow-x: auto;
}
.slidecontainer,.slidecontent{
    height: 100%;
    width: 100%;
    overflow-x: auto ;

}
.slidecontent{
    height: 90%;
    padding-bottom: 20px;
    
    flex-wrap: nowrap;
}

.slidecontent::-webkit-scrollbar {
    
    height: 7px; /* height of the scrollbar */
    background-color: var(--darkColor); /* background color of the scrollbar */
    margin: 0px 25px;
  }
  
  .slidecontent::-webkit-scrollbar-thumb {
    background-color: var(--lightColor); /* color of the scrollbar thumb */
    border-radius: 10px; /* rounded corners of the scrollbar thumb */
    width: 5px; 
    transition: all 0.3s;
    cursor: grab;
  }
  
  .slidecontent::-webkit-scrollbar-thumb:hover{
    background-color: var(--lightColorHover); /* color of the scrollbar thumb */
    transition: all 0.3s;
  }

  .slidecontent::-webkit-scrollbar-track {
    width: 50px;
    background-color: transparent; /* background color of the scrollbar track */
    border-radius: 10px; /* rounded corners of the scrollbar track */
  }
  
.page-4 .cards-wrapper{
    height: 100%;
    width: max-content;
    overflow-x: scroll;
    display: flex;
    overflow-x: auto ;
    justify-content: center;
    align-items: center;
    padding: 0px 25px;
    margin: auto;
}
.page-4 .cards-wrapper .cards{

    height: 60vh;
    /* flex: 0; */
    
    /* max-height: 300px; */
    aspect-ratio: 3/4;
    position: relative;
    border-radius: 30px;
    margin-right: 30px;
}
@media only screen and (max-width: 900px){
    .page-4 .cards-wrapper .cards{
        width: 45vw;
        min-width: 175px;
        height: auto;
    }
}
.page-4 .cards .img{
    height: 100%;
}
.page-4 .cards .img img{
height: 100%;
width: 100%;
object-fit: cover;
}
.page-4 .cards .txt{
    display: flex;
    align-items: center;
    gap: 10px;
    position: absolute;
    bottom:-20%;
    left: 30%;
    z-index: 99;
    
}
.page-4 .cards .logo{
    height: fit-content;   
    width: 20px; 
}
.page-4 .cards .txt h3{
    color:var(--yellow-color);
    font-size: 1.75rem;
}
.page-4 .cards .gradient{
    background-image: linear-gradient(transparent 30%,var(--gradient-color-bottom));
    width: 100%;
    height: 100%;
    position: absolute;
    top: 100%;
    z-index: 9;
    
}

/* .page 5............................................... */

.page-5{
    color: var(--lightColor);
    
    background-image: url('assets/tmp/footer.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}
.page-5 h3 {
    font-size: 3vw;
   position: absolute;
   font-family: var(--base-font); 
   top: 10%;
   left: 5%;
   
   padding: 5px 10px;

}
@media only screen and (min-width: 960px){
    .page-5 h3{

        font-size: 25px;
    }
}
.footer-part{
    width: 100%;
    max-height: max-content;
    display: grid;
    grid-template-columns: 1fr 0.7fr 1fr 1fr;
    /* grid-template-rows: repeat(2,1fr); */
    
    position: absolute;
    bottom: 0%;

    /* margin-bottom: 10px; */
    padding: 7% 10%;
    color:var(--gray-color);

    font-size: 1rem;

    background-image: linear-gradient(rgba(0, 0, 0, 0),var(--gradient-color-bottom));

}
.footer-part ul {
    list-style-type: none;
}
.footer-part ul li{
    display: flex;
    align-items: center;
    gap:10px;
}
.footer-part .logo{
    width: 17px;
    height: auto;
    aspect-ratio: 1;
}
.footer-part h4{
    margin-bottom: 10px;
    font-size: 1em;
}
.footer-part .row2{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.footer-part p{
    font-size: 0.9em;
}
@media only screen and (max-width: 900px){
.footer-part{
    grid-template-columns: 1fr 1fr;
    gap:  20px 0px;
    bottom: 0%;
    
    
}
}
@media only screen and (min-width:1200px){
    .footer-part{
        padding:50px 5%;
        bottom: 0px;
    }

}

@media only screen and (max-width:350px) {
        .footer-part h4 {

            font-size: 0.8em;
        }

        .footer-part p {

            font-size: 0.5em;
        }

    }

